# knmi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  knmi.rs  main.rs  util.rs
src/knmi/: _download.rs  api.rs  arome.rs  download.rs  files.rs  grib_codes.rs  harmonie_arome.rs  models.rs  notifications.rs  sources.rs
src/knmi/api/: forecast.rs
src/knmi/models/: arome.rs  grib.rs
src/util/: dir.rs  grib.rs  tar.rs
