[package]
name = "knmi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.0" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
listenfd = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
tokio-tar = "0.3"
eccodes-sys = "0.5.2"
eccodes = { version = "0.10.1", features = ["message_ndarray"] }
lazy_static = "1.4.0"
chrono = "0.4"
# peroxide = { version = "0.35.1", features = ["nc"] }
peroxide = { version = "0.35.1" }
ndarray = "0.15"
# netcdf = { version = "0.7" }
netcdf = { version = "0.9", features = ["ndarray"] }
peak_alloc = "0.2.1"